<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/allbackground">

    <RelativeLayout
        android:id="@+id/recyanimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_welcome"
        android:fromAlpha="0.5"
        android:toAlpha="1.0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y100"
        android:background="@null"
        android:drawableTop="@mipmap/login_logo"
        android:drawablePadding="8dp"
        android:text="@string/welcome_smartlock"
        android:textColor="#ffffff" />


    <ImageView
        android:id="@+id/spaiamge_loaddate_anim"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/load1"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splash_wxlogin"
            style="@style/splash_login_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/login_wx"
            android:drawablePadding="8dp"
            android:text="@string/splash_wxlogin"
            android:textColor="#ffffff"
            android:visibility="gone" />


        <Button
            android:id="@+id/splash_numlogin"
            style="@style/splash_login_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/login_wx"
            android:drawablePadding="8dp"
            android:text="@string/splash_numlogin"
            android:textColor="#ffffff" />

    </LinearLayout>


</RelativeLayout>