<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/D9D9D9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"

            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/changeusername"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="请输入"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/a595959"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/D9D9D9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:text="@string/phonenumber"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/changephonenum"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="请输入"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/a595959"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/D9D9D9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:text="@string/idcardnum"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/changeidnum"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="请输入"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/a595959"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/D9D9D9" />

        <RelativeLayout
            android:id="@+id/inpstarttimute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:text="@string/starttime"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/starttimute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="@string/pleasewrite2"
                android:textColor="@color/a595959" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"

            android:background="@color/D9D9D9" />

        <RelativeLayout
            android:id="@+id/inpendtimute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:text="@string/endtime"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/endtimute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="@string/pleasewrite2"
                android:textColor="@color/a595959" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/D9D9D9" />

        <RelativeLayout
            android:id="@+id/buttoncommit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="6dp">


            <Button
                android:id="@+id/buttoncommit2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/nextsetup"
                android:text="@string/save"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/bookinforedit_anim"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/load1"
        android:visibility="gone" />
</RelativeLayout>